fix: prevent billboard form overflowing

--- a/src/style-banner.scss
+++ b/src/style-banner.scss
@@ -51,6 +51,7 @@ img {
 :host([billboard]) {
   .bannerWrapper {
     position: relative;
+    overflow: hidden;
   }
 
   .action {
